Villes + activity meteo et adpater

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,5 +23,7 @@
         </activity>
         <activity android:name=".CityActivity">
         </activity>
+        <activity android:name=".MeteoActivity">
+        </activity>
     </application>
 </manifest>
