--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.11'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'com.facebook.fresco:fresco:2.4.0'
+
 }
